--- a/src/index.css
+++ b/src/index.css
@@ -344,7 +344,7 @@ img {
 .games__container {
   display: flex;
   flex-direction: row;
-  margin: 2rem;
+  /*margin: 2rem;*/
   padding: 2rem;
   align-items: start;
 }
@@ -384,17 +384,19 @@ img {
 
 .list__list {
   display: flex;
+  width: 100%;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: start;
   align-items: center;
   padding: 2rem;
-  gap: 8rem;
+  gap: 5rem;
 }
 
 /******filter*******/
 
 .nav__filter-list {
   padding: 2rem;
+  margin-right: 6rem;
 }
 
 .nav__filter-item-text {
@@ -405,6 +407,8 @@ img {
   margin: 1rem;
   font-weight: 500;
   font-size: 1.8rem;
+  margin-left: 5px;
+  width: 150px;
 }
 
 .arrow {
@@ -420,7 +424,11 @@ img {
 .arrow.up {
   border-top: none;
   border-bottom: 5px solid black;
-  /* Flecha hacia arriba cuando está abierto */
+
+}
+
+.arrow .down {
+  margin-left: 5px;
 }
 
 .nav__filter-item-nav {
@@ -590,9 +598,10 @@ img {
 
 .card__category-body {
   position: absolute;
-  top: 75%;
+  top: 70%;
   left: 5%;
   width: 90%;
+  height: 7rem;
   box-sizing: border-box;
   transition: all 300ms ease-in-out;
   padding: 2rem;
@@ -600,6 +609,8 @@ img {
   backdrop-filter: blur(5px);
   border-radius: 10px;
   z-index: 100;
+  text-align: center;
+  word-spacing: 0.1rem;
 }
 
 .card__category-img {
@@ -988,30 +999,11 @@ img {
   cursor: pointer;
 }
 
-.game__card-title {
-  position: absolute;
-  top: 0;
-  background-color: #047edf;
-  transition: all 300ms ease-in-out;
-  width: 86%;
-  border-radius: 5px 5px 0 0;
-}
 
 .game__card {
   width: 100%;
   height: 38rem;
   z-index: 1;
-}
-
-.game__card-body {
-  position: absolute;
-  top: 0;
-  background-color: #90caf9;
-  transition: all 300ms ease-in-out;
-  opacity: 0;
-  width: 86%;
-  border-radius: 0px 0px 5px 5px;
-
 }
 
 .game__card-img {
@@ -1027,32 +1019,50 @@ img {
   border-radius: 15px;
 }
 
-.game__card-list:hover>.game__card-body {
-  z-index: 999;
-  animation-name: slideIn;
-  animation-iteration-count: infinite;
-  animation-duration: 100s;
-  animation-timing-function: ease-in-out;
-
+.game__card-price{
+  font-size: 1.5rem;
+  font-weight: 600;
+  color: #fff;
 }
 
-.game__card-list:hover .game__card-title {
-  background-color: #555454;
-  top: -20px;
-
+.game__card-descuento{
+  font-size: 1.5rem;
+  font-weight: 600;
+  padding: 0.5rem 1rem;
+  border-radius: 5px;
+  margin-left: 1rem;  
+  margin-right: 1rem;
+  text-decoration: line-through; 
 }
 
-@keyframes slideIn {
-  0% {
-    opacity: 0.9;
-    transform: translateY(370px)
-  }
-
-  1% {
-    opacity: 1;
-    transform: translateY(380px)
-  }
+.game__card-body-content{
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  margin-top: 2rem;
 }
+
+.game__card-description{
+  padding-left: 1rem;
+}
+
+.game__card-description-plataform{
+  font-size: 1.2rem;
+  font-weight: 600;
+  color: #575454;
+  padding: 1rem;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  color: #ccc;
+  background-color: #161616;
+  text-transform: uppercase;
+  transition: all 300ms ease-in-out;
+  cursor: pointer;
+}
+
 
 /******game view*****/
 
@@ -1199,15 +1209,18 @@ img {
 
 }
 
-.preview__dnd-img {}
+.preview__dnd-img {
+ 
+}
 
 .game__card-img-img {
   width: 100%;
-  height: 200px;
 }
 
 
 .slider__dnd-img {
+  width: 100%;
+  height: 200px;
   object-fit: fill;
 }
 
@@ -1768,4 +1781,28 @@ img {
   max-width: 100%;
   height: auto;
   display: block;
+}
+
+/***Skeleton***/
+
+.my-custom-skeleton-card-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  margin: 2rem;
+  padding: 2rem;
+  gap: 2rem;
+}
+
+.react-loading-skeleton {
+  padding-left: 1rem;
+}
+
+.my-custom-skeleton-card-container .react-loading-skeleton__line {
+  margin-bottom: 8px; 
+  width: 90%; 
+}
+.my-custom-skeleton-card-container .react-loading-skeleton__line:first-child {
+  height: 180px;
 }
