--- a/src/index.css
+++ b/src/index.css
@@ -980,6 +980,15 @@ img {
   align-items: center;
 }
 
+.games__games-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding-bottom: 2rem;
+
+}
+
 /******card******/
 
 .games__games {
@@ -1805,4 +1814,39 @@ img {
 }
 .my-custom-skeleton-card-container .react-loading-skeleton__line:first-child {
   height: 180px;
+}
+
+/***Paginacion***/
+
+.paginacion-games {
+  
+  display: inline-block;
+  
+}
+
+.paginacion-content {
+
+  display: flex;
+  list-style: none;
+  gap: 10px;
+  justify-content: center;
+  padding: 0.8rem;
+  cursor: pointer;
+  background-color: #f0f0f0;
+  border-radius: 10px;
+  padding: 1rem 1.5rem;
+  transition: all 300ms ease-in-out;
+}
+
+.pagina-activa {
+  border-radius: 0.5rem;
+  background-color: #4070F4;
+  padding: 0.5rem 1rem;
+  margin-left: 0.5rem;
+  transition: all 300ms ease-in-out;
+  cursor: pointer;
+}
+
+.pagina-activa a{
+  color: white;
 }
