--- a/src/index.css
+++ b/src/index.css
@@ -455,6 +455,20 @@ img {
   margin-left: 1rem;
 }
 
+.nav__filter-item-list-precio{
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.nav__filter-descuento{
+  display: block;
+}
+
+.nav__filter-item-opc-item-descuentos{
+  display: flex;
+}
+
 /*******admin*******/
 
 .cards__admins{
@@ -1849,4 +1863,18 @@ img {
 
 .pagina-activa a{
   color: white;
+}
+
+/***input-games***/
+.input-has-icon{
+  border: 1px solid #ccc;
+  width: 100%;
+  background-color: transparent;
+  border-radius: 10px;
+  padding: 12px 15px;
+  color: black;
+  font-weight: 500;
+  outline: none;
+  caret-color: rgb(155, 78, 255);
+  transition: all 300ms ease-in-out;
 }
