--- a/src/index.css
+++ b/src/index.css
@@ -1878,3 +1878,100 @@ img {
   caret-color: rgb(155, 78, 255);
   transition: all 300ms ease-in-out;
 }
+
+/***Descuentos***/
+.descuentos__title{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 2rem;
+}
+
+.descuentos__list{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+}
+
+.descuentos__item-container{
+  width: 30%;
+  height: 250px;
+}
+
+.descuentos__container{
+  margin-top: 4rem;
+}
+
+.section__descuento{
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  height: 100%;
+}
+
+.descuentos__item{
+  display: flex;
+  flex-direction: row;
+  align-items: top;
+  gap: 2rem;
+  margin-bottom: 3rem;
+  border: 1px solid #ccc;
+  padding: 2rem;
+  width: 100%;
+}
+
+.descuentos__item-img{
+  width: 150px;
+  height: 175px;
+}
+
+.descuentos__item-img img{
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+}
+
+.descuentos__item-desc{
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.input-has-icon-desc{
+  width: 20%;
+}
+
+.descuentos__item-title{
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.destacado_checkbox{
+  margin: 0 1rem;
+  padding-top: 1px;
+}
+
+.descuentos__item-title-text{
+  text-transform: capitalize;
+}
+
+.remarcar_text{
+  font-weight: 600;
+}
+
+.destacado_checkbox{
+  margin-top: 1rem;
+}
+
+.games__paginacion{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 2rem;
+  padding: 2rem;
+  gap: 5rem;
+}
